<resources>
    <string name="app_name">Calculator</string>
    <string name="button_operation_division_text">/</string>
    <string name="button_number_zero_text">0</string>
    <string name="button_operation_multiplication_text">*</string>
    <string name="button_number_nine_text">9</string>
    <string name="button_number_eight_text">8</string>
    <string name="button_number_seven_text">7</string>
    <string name="button_operation_subtraction_text">-</string>
    <string name="button_number_six_text">6</string>
    <string name="button_number_five_text">5</string>
    <string name="button_number_four_text">4</string>
    <string name="button_operation_addition_text">+</string>
    <string name="button_number_three_text">3</string>
    <string name="button_number_two_text">2</string>
    <string name="button_number_one_text">1</string>
    <string name="button_operation_reset_text">C</string>
    <string name="button_operation_backspace_text">←</string>
    <string name="button_operation_result_text">=</string>
    <string name="button_operation_decimal_separator_text">.</string>
    <string name="background_image_description">Background image</string>
    <string name="theme_list_header">Please select theme:</string>
    <string name="main_theme_name_in_list">Standard calculator theme</string>
    <string name="sand_theme_name_in_list">Send theme</string>
    <string name="theme_selected">(selected)</string>
</resources>