<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_operation_reset"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:gravity="center"
        android:text="@string/button_operation_reset_text"
        android:textSize="@dimen/button_operation_text_size"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_operation_backspace"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:gravity="center_horizontal|top"
        android:paddingTop="2dp"
        android:text="@string/button_operation_backspace_text"
        android:textSize="@dimen/button_operation_text_size"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_operation_result"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:gravity="center"
        android:text="@string/button_operation_result_text"
        android:textSize="@dimen/button_operation_text_size"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_operation_addition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:gravity="center"
        android:text="@string/button_operation_addition_text"
        android:textSize="@dimen/button_operation_text_size"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_number_one"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/button_number_one_text"
        android:textSize="@dimen/button_number_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_number_two"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/button_number_two_text"
        android:textSize="@dimen/button_number_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_number_three"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/button_number_three_text"
        android:textSize="@dimen/button_number_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_number_four"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/button_number_four_text"
        android:textSize="@dimen/button_number_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_number_five"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/button_number_five_text"
        android:textSize="@dimen/button_number_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_number_six"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/button_number_six_text"
        android:textSize="@dimen/button_number_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_operation_subtraction"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:gravity="center"
        android:text="@string/button_operation_subtraction_text"
        android:textSize="@dimen/button_operation_text_size"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_number_seven"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/button_number_seven_text"
        android:textSize="@dimen/button_number_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_number_eight"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/button_number_eight_text"
        android:textSize="@dimen/button_number_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_number_nine"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/button_number_nine_text"
        android:textSize="@dimen/button_number_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_operation_multiplication"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:gravity="center_horizontal|top"
        android:paddingTop="12dp"
        android:text="@string/button_operation_multiplication_text"
        android:textSize="@dimen/button_operation_text_size"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_operation_decimal_separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:gravity="center_horizontal|top"
        android:paddingTop="0dp"
        android:text="@string/button_operation_decimal_separator_text"
        android:textSize="@dimen/button_operation_text_size"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_number_zero"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:gravity="center"
        android:text="@string/button_number_zero_text"
        android:textSize="@dimen/button_number_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_operation_division"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_default_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:gravity="center"
        android:text="@string/button_operation_division_text"
        android:textSize="@dimen/button_operation_text_size"
        android:textStyle="bold" />
</merge>